fix issues with inline notes getting cut off due to attempting to place in the page margins

--- a/css/override.css
+++ b/css/override.css
@@ -59,13 +59,14 @@ body {
 }
 
 .note-text-wide-rendered {
-  max-width: 14em;
+  width: 14em;
   box-sizing: content-box;
   font-family: 'Indie Flower', serif;
   font-size: 1.4em;
   line-height: 0.85;
   margin-top: 1.2em;
   margin-bottom: 0.8em;
+  overflow-x: visible;
 }
 
 .hidden {
